# lims-qms-platform

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.streamlit  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_DATA_CAPTURE.md  README.md  README_DMS.md  README_IMPLEMENTATION.md  README_SESSION4.md  README_SESSION9.md  SESSION_2_DATA_CAPTURE_ENGINE.md  SESSION_2_SUMMARY.md  SETUP_GUIDE.md  alembic.ini  config.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_api.sh  run_backend.sh  run_frontend.sh  run_ui.sh  setup.sh
.github/workflows/: ci-cd.yml
ai_models/: __init__.py
ai_models/doc_classification/: __init__.py  model.py
ai_models/nc_root_cause/: __init__.py  model.py
ai_models/predictive_maintenance/: __init__.py  model.py
ai_models/test_duration/: __init__.py  model.py
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/: documents.py  iec_tests.py  schemas.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  document.py  iec_tests.py
app/schemas/: __init__.py  iec_tests.py
app/services/: __init__.py  certificate_generator.py  document_numbering.py  document_service.py  graph_generator.py  pass_fail_evaluator.py  pdf_service.py  report_generator.py  search_service.py  test_execution.py
app/utils/: digital_signature.py  qr_generator.py
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  config.py  database.py  main.py  models.py  requirements.txt  run.py
backend/alembic/: env.py
backend/api/: __init__.py  ai_models.py  analytics.py  audit.py  audit_risk.py  customer_portal.py  documents.py  equipment.py  lims.py  nonconformance.py  samples.py  schemas.py  test_reports.py  training.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/core/: __init__.py  config.py  database.py  security.py
backend/database/: __init__.py  database.py  models.py
backend/models/: crm.py  (+23 more)
database/: init.sql  init_db.py  schema.sql
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: ANALYTICS_SYSTEM.md  API_DOCUMENTATION.md  API_EXAMPLES_TRACEABILITY.md  DATA_CAPTURE_ENGINE.md  DOCUMENT_TEMPLATE_MANAGEMENT.md  INTEGRATION_LAYER.md  QUICK_START.md  README.md  SESSION_8_README.md  TRACEABILITY_ENGINE.md  USER_AUTH_RBAC_GUIDE.md  WORKFLOW_AUTOMATION_ENGINE.md  architecture.md  database_schema.md  document_management_system.md
examples/: data_capture_examples.py  document_management_examples.py
frontend/: .dockerignore  Dockerfile  Home.py  README.md  app.py  requirements.txt  streamlit_app.py
nginx/: nginx.conf
scripts/: backup_database.sh  generate_sample_data.py  init_db.py  init_db.sql  restore_database.sh  run_all.sh  setup.sh
streamlit_app/: Home.py  __init__.py  app.py  main.py
tests/: __init__.py  test_data_capture.py
(+217 files in other folders)
